--- a/src/SingleInstance/SingleInstance/MainWindow.xaml
+++ b/src/SingleInstance/SingleInstance/MainWindow.xaml
@@ -1,8 +1,38 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="SingleInstance.MainWindow">
   <DockPanel Margin="10">
     <WrapPanel DockPanel.Dock="Top" Margin="0 0 0 5">
-      <Button Content="Test" />
+      <Rectangle Fill="Black" Height="24" RenderTransformOrigin="0.5 0.5" Width="24">
+        <Rectangle.RenderTransform>
+          <RotateTransform />
+        </Rectangle.RenderTransform>
+        <Rectangle.Triggers>
+          <EventTrigger RoutedEvent="Loaded">
+            <BeginStoryboard>
+              <Storyboard>
+                <DoubleAnimation Storyboard.TargetProperty="(Rectangle.RenderTransform).(RotateTransform.Angle)" To="-360" Duration="0:0:1" RepeatBehavior="Forever"></DoubleAnimation>
+              </Storyboard>
+            </BeginStoryboard>
+          </EventTrigger>
+        </Rectangle.Triggers>
+      </Rectangle>
     </WrapPanel>
-    <ListBox />
+    <TreeView ItemsSource="{Binding}">
+      <TreeView.ItemTemplate>
+        <HierarchicalDataTemplate ItemsSource="{Binding}">
+          <WrapPanel>
+            <TextBlock>
+              <Span>Command line with </Span>
+              <TextBlock Text="{Binding Count}" />
+              <Span> arguments…</Span>
+            </TextBlock>
+          </WrapPanel>
+          <HierarchicalDataTemplate.ItemTemplate>
+            <DataTemplate>
+              <TextBlock Text="{Binding}" />
+            </DataTemplate>
+          </HierarchicalDataTemplate.ItemTemplate>
+        </HierarchicalDataTemplate>
+      </TreeView.ItemTemplate>
+    </TreeView>
   </DockPanel>
 </Window>
